<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editItemToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        app:title="@string/toolbar_title_edit_item"
        app:titleTextColor="@color/toolbar_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layoutDirection="rtl"
            android:textDirection="rtl">

            <EditText
                android:id="@+id/titleEditText"
                style="@style/newItemEditText"
                android:hint="@string/edit_text_item_title_hint"
                android:inputType="textImeMultiLine"
                android:lines="1"
                android:maxLength="59"
                android:maxLines="1"
                android:layout_margin="3dp"
                />

            <EditText
                style="@style/newItemEditText"
                android:hint="@string/edit_text_item_description_hint"
                android:maxLength="1000"
                android:inputType="textMultiLine"
                android:id="@+id/descriptionEditText"
                android:layout_margin="3dp"
                android:maxLines="50"
                />

            <EditText
                style="@style/newItemEditText"
                android:hint="@string/edit_text_item_price_hint"
                android:maxLength="25"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textImeMultiLine"
                android:id="@+id/priceEditText"
                android:layout_margin="3dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/myButton"
                android:layout_margin="3dp"
                android:text="@string/button_update_item"
                android:onClick="updateItem"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>