<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/broadcastToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize"
        android:layoutDirection="ltr"
        android:textDirection="ltr"
        app:title="@string/toolbar_title_broadcast"
        app:titleTextColor="@color/toolbar_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layoutDirection="rtl"
            android:textDirection="rtl"
            android:baselineAligned="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/broadcastTypeEditText"
                style="@style/newItemEditText"
                android:inputType="textMultiLine"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:layout_margin="3dp"
                android:maxLines="50"
                android:hint="@string/edit_text_hint_broadcast_type"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/broadcastMessageEditText"
                style="@style/newItemEditText"
                android:inputType="textMultiLine"
                android:layoutDirection="rtl"
                android:textDirection="rtl"
                android:layout_margin="3dp"
                android:maxLines="50"
                android:hint="@string/edit_text_hint_broadcast_message"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/myButton"
                android:layout_margin="3dp"
                android:text="@string/button_broadcast"
                android:onClick="sendBroadcast"
                android:id="@+id/sendBroadcastButton" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>